--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-stage7 Localised",
+  "name": "template-stage7-localised",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
